[package]
name = "rust_simd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rand = "0.8.5"
rayon = "1.7.0"

[[bin]]
name = "naive"
path = "src/bin/naive.rs"

[[bin]]
name = "simd"
path = "src/bin/simd.rs"

[[bin]]
name = "simd_no_bounds"
path = "src/bin/simd_no_bounds.rs"
